Change scroll lock to prevent layout shift on modal open

--- a/_sass/base/_reset.scss
+++ b/_sass/base/_reset.scss
@@ -38,9 +38,7 @@ body.no-scroll {
     overflow: hidden;
     overflow-x: hidden;
     overscroll-behavior-x: none;
-    position: fixed;
     inline-size: 100%;
-    padding-inline-end: var(--scrollbar-width, 0px);
 }
 
 img,
